--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -24,15 +24,16 @@
   }
 
   &_space .nd-container {
-    @include grid-template-columns(calc(100% - 468px) 50px 418px);
-    @include grid-template-rows(auto auto);
+    @include grid-template-columns(calc(100% - 468px) 418px);
+    @include grid-template-rows(auto auto auto);
+    @include rule(column-gap, (xl: 50px, xlg: 50, lg: 46, md: 0));
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(pxtovw(1108, 1660) pxtovw(50, 1660) pxtovw(382, 1660));
+      @include grid-template-columns(pxtovw(1108, 1660) pxtovw(382, 1660));
     }
 
     @include screen('lg', max, 2) {
-      @include grid-template-columns(pxtovw(838, 1366) pxtovw(46, 1366) pxtovw(382, 1366));
+      @include grid-template-columns(pxtovw(838, 1366) pxtovw(382, 1366));
     }
 
     @include screen('md', max, 2) {
@@ -158,33 +159,46 @@
     #{$b}_space & {
       &_main {
         @include grid-column(1, 2);
-        @include grid-row(1, 2);
-
-        padding-left: 96px;
-        padding-bottom: 142px;
-
-        @include screen('xlg', max, 2) {
-          padding-left: pxtovw(96, 1660);
-          padding-bottom: pxtovw(142, 1660);
-        }
-
-        @include screen('lg', max, 2) {
-          padding-left: 0;
-          padding-bottom: 0;
-        }
+        @include grid-row(2, 3);
+        @include rule(padding-left, (xl: 96px, xlg: 96, lg: 0));
+        @include rule(padding-bottom, (xl: 142px, xlg: 142, lg: 0));
 
         @include screen('md', max, 2) {
           @include grid-row(2, 3);
         }
+
+        &:not(:first-child) {
+          @include rule(margin-top, (xl: 74px, xlg: 74, lg: 58, md: 0));
+        }
       }
 
       &_aside {
-        @include grid-column(3, 4);
+        @include grid-column(2, 3);
+        @include grid-row(2, 3);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(4, 5);
+        }
+      }
+
+      &_side-form {
+        @include grid-column(2, 3);
         @include grid-row(1, 2);
 
-        @include screen('lg', max, 2) {
-          @include grid-row(1, 3);
+        display: flex;
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 2);
+
+          display: none;
         }
+      }
+
+      &_top {
+        @include grid-column(1, 2);
+        @include grid-row(1, 2);
 
         @include screen('md', max, 2) {
           @include grid-column(1, 2);
@@ -193,8 +207,8 @@
       }
 
       &_footer {
-        @include grid-column(1, 4);
-        @include grid-row(2, 3);
+        @include grid-column(1, 3);
+        @include grid-row(3, 4);
 
         margin: 0 -45px;
         width: calc(100% + 90px);
