--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -489,6 +489,21 @@
           @include grid-row(3, 4);
         }
       }
+
+      &_upload {
+        @include grid-column(1, 2);
+        @include grid-row(1, 2);
+      }
+
+      &_form {
+        @include grid-column(2, 3);
+        @include grid-row(1, 3);
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(2, 3);
+        }
+      }
     }
   }
 
@@ -627,6 +642,29 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(10, 375);
       }
+    }
+  }
+
+  &_ha-basic {
+    @include display-grid;
+    @include grid-template-columns(508px 1fr);
+    @include grid-template-rows(auto auto);
+    @include rule(column-gap, (xl: 50px, xlg: 50, lg: 30, md: 20, sm: 0));
+
+    @include screen('xlg', max, 2) {
+      @include grid-template-columns(pxtovw(508, 1660) 1fr);
+    }
+
+    @include screen('lg', max, 2) {
+      @include grid-template-columns(1fr 1fr);
+    }
+
+    @include screen('md', max, 2) {
+      @include grid-template-columns(1fr 1fr);
+    }
+
+    @include screen('sm', max, 2) {
+      @include grid-template-columns(100%);
     }
   }
 
