--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -1008,6 +1008,12 @@
       }
     }
 
+    &_mt38 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 23));
+      }
+    }
+
     #{$b}__wrapper {
       flex: 1;
 
