--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -200,9 +200,13 @@
         @include grid-column(1, 2);
         @include grid-row(1, 2);
 
+        display: flex;
+
         @include screen('md', max, 2) {
           @include grid-column(1, 2);
           @include grid-row(1, 2);
+
+          display: block;
         }
       }
 
