--- a/app/pages/host-account/host-account-settings-basic.pug
+++ b/app/pages/host-account/host-account-settings-basic.pug
@@ -40,29 +40,29 @@ block content
               +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 0, 'Basic information')
 
           +dashboard('form')._ha-basic.__dashboard_mt.js-form-with-hidden-panel(data-validated-form)
-            +board._pb36.__board_ha._ha_upload
+            +board._pb60._pt47._pad40.__board_ha._ha_upload
               +board-title._fz22._tac Account userpic
-              +nd-avatar-uploader('section', 'avatar')._vertical._center.__uploader
+              +nd-avatar-uploader('section', 'avatar', {src: 'assets/images/nd/user-avatar-14.jpg', class: '_sz210'})._vertical._center.__uploader_ha
                 +nd-link._underline.__remove(data-uploader-clear="avatar" data-callback="serverSave") Delete Current Userpic
-            +board._pb36.__board_ha._ha_form
+            +board._pad40._pt47.__board_ha._ha_form
               +board-title._fz22 Account information
-              +nd-form('section').__form
-                +e.row
+              +nd-form('section').__form_ha
+                +e.row_mt38
                   +form-section-wrapper
                     +nd-form-box('First name')._bg-white
                       +nd-input(type="text" name="firstName" placeholder="First name" required value="Eugene")
-                    +e.row
-                      +form-section-wrapper
-                        +nd-form-box('Last name')._bg-white
-                          +nd-input(type="text" name="lastName" placeholder="Last name" required value="Sheeleen")
-                    +e.row
-                      +form-section-wrapper
-                        +nd-form-box('Email')._bg-white
-                          +nd-input(type="email" name="email" placeholder="Email" required value="esdesign.lv@gmail.com")
-                    +e.row
-                      +form-section-wrapper
-                        +nd-form-box('Phone No')._bg-white
-                          +nd-input(type="tel" name="phoneNumber" placeholder="Phone number" value="2359892531")
+                +e.row_mt38
+                  +form-section-wrapper
+                    +nd-form-box('Last name')._bg-white
+                      +nd-input(type="text" name="lastName" placeholder="Last name" required value="Sheeleen")
+                +e.row_mt38
+                  +form-section-wrapper
+                    +nd-form-box('Email')._bg-white
+                      +nd-input(type="email" name="email" placeholder="Email" required value="esdesign.lv@gmail.com")
+                +e.row_mt38
+                  +form-section-wrapper
+                    +nd-form-box('Phone No')._bg-white
+                      +nd-input(type="tel" name="phoneNumber" placeholder="Phone number" value="2359892531")
 
             +nd-form-panel()._wide._hidden.is-fixed(data-hidden-panel)
               .nd-container
