--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -24,7 +24,7 @@ block content
   +nd-content._space
     .nd-container.nd-container_space
       +e.column_top
-        +nd-section._space._mt114
+        +nd-section._space._space_top
           +gallery({images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space-lead1.jpg", "assets/images/space-lead2.jpg", "assets/images/space-lead3.jpg", "assets/images/space-lead4.jpg"], gallerytag: "spacegallery", buttons: true, dots: true, dotsClass: ' nd-hide-from-sm'}).__gallery.js-nd-gallery
           +nd-section-header.nd-hide-from-md
             +e.boxes
