--- a/app/blocks/board/board.scss
+++ b/app/blocks/board/board.scss
@@ -123,6 +123,14 @@
     @include rule(padding-bottom, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 36));
   }
 
+  &_pb60 {
+    @include rule(padding-bottom, (xl: 60px, xlg: 60, lg: 60, md: 58, sm: 25));
+  }
+
+  &_pt47 {
+    @include rule(padding-top, (xl: 47px, xlg: 47, lg: 47, md: 26, sm: 26));
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -1261,6 +1269,12 @@
         margin-top: pxtovw(36, 375);
       }
     }
+
+    &_ha {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 55px, xlg: 55, lg: 55, md: 55, sm: 45));
+      }
+    }
   }
 
   &__uploader {
@@ -1283,6 +1297,12 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(40, 375);
+      }
+    }
+
+    &_ha {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 47px, xlg: 47, lg: 47, md: 47, sm: 40));
       }
     }
   }
