--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -69,7 +69,7 @@ block content
               +nd-link(href="host-account-managers-invite.html") Spacepool - Host Account - Managers | Invite (host-account-managers-invite.html)
               +nd-link(href="host-account-managers-invite-success.html") Spacepool - Host Account - Managers | Invite Success(host-account-managers-invite-success.html)
               +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings (host-account-settings.html)
-              //- +nd-link(href="host-account-settings-basic.html") Spacepool - Host Account - Settings | Basic information (host-account-settings-basic.html)
+              +nd-link(href="host-account-settings-basic.html") Spacepool - Host Account - Settings | Basic information (host-account-settings-basic.html)
               +nd-link(href="host-account-settings-company.html") Spacepool - Host Account - Settings | Company details (host-account-settings-company.html)
               +nd-link(href="host-account-settings-password.html") Spacepool - Host Account - Settings | Password (host-account-settings-password.html)
               //- +nd-link(href="host-account-settings-notifications.html") Spacepool - Host Account - Settings | Notification settings (host-account-settings-notifications.html)
