--- a/app/styles/helpers/_fonts.scss
+++ b/app/styles/helpers/_fonts.scss
@@ -1,15 +1,15 @@
-@include font-face('ProximaNova', normal, 100, 'ProximaNovaTThin');
-@include font-face('ProximaNova', normal, 300, 'ProximaNovaLight');
+@include font-face('ProximaNova', normal, 100, 'ProximaNovaTThin', 'swap');
+@include font-face('ProximaNova', normal, 300, 'ProximaNovaLight', 'swap');
 @include font-face('ProximaNova', normal, 400, 'ProximaNovaRegular');
-@include font-face('ProximaNova', normal, 500, 'ProximaNova-Medium');
-@include font-face('ProximaNova', normal, 600, 'ProximaNovaSemibold');
-@include font-face('ProximaNova', normal, 700, 'ProximaNovaBold');
-@include font-face('ProximaNova', normal, 800, 'ProximaNovaExtrabld');
-@include font-face('ForPassword', normal, 400, 'ForPassword');
+@include font-face('ProximaNova', normal, 500, 'ProximaNova-Medium', 'swap');
+@include font-face('ProximaNova', normal, 600, 'ProximaNovaSemibold', 'swap');
+@include font-face('ProximaNova', normal, 700, 'ProximaNovaBold', 'swap');
+@include font-face('ProximaNova', normal, 800, 'ProximaNovaExtrabld', 'swap');
+@include font-face('ForPassword', normal, 400, 'ForPassword', 'swap');
 @include font-face('Stolzl', normal, 400, 'Stolzl-Regular');
-@include font-face('Stolzl', normal, 500, 'Stolzl-Medium');
-@include font-face('StolzlBook', normal, 400, 'Stolzl-Book');
-@include font-face('StolzlBook', normal, 500, 'Stolzl-Medium');
+@include font-face('Stolzl', normal, 500, 'Stolzl-Medium', 'swap');
+@include font-face('StolzlBook', normal, 400, 'Stolzl-Book', 'swap');
+@include font-face('StolzlBook', normal, 500, 'Stolzl-Medium', 'swap');
 
 /* Соответствие письменного названия жирности числовому значению
 100 — Thin
