--- a/app/layouts/head-redesign.pug
+++ b/app/layouts/head-redesign.pug
@@ -9,5 +9,8 @@ head
   meta(name='keywords' content=pageKeywords || '')
 
   link(href='favicon.ico' rel='shortcut icon')
+  link(rel="preload" href="assets/fonts/Stolzl-Regular.woff2" as="font")
+  link(rel="preload" href="assets/fonts/Stolzl-Book.woff2" as="font")
+  link(rel="preload" href="assets/fonts/ProximaNovaRegular.woff2" as="font")
   link(href='assets/styles/app.min.css' rel='stylesheet')
   script(src='assets/scripts/libs/jquery.min.js')
