issue#71, add auto submit for form in search panel on main page, update infoWindow for map, add infoWindow for map on search page

--- a/app/blocks/map-popup/map-popup.scss
+++ b/app/blocks/map-popup/map-popup.scss
@@ -11,7 +11,7 @@
   visibility: hidden;
   background-color: $nd-color-basic-light;
   color: $nd-color-basic;
-  transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-50%, -100%, 0);
   font-family: $font-main;
 
   @include screen('xlg', max, 2) {
