--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -1042,6 +1042,12 @@
         @include rule(margin-top, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 35));
       }
     }
+
+    &_mt55 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 55px, xlg: 55, lg: 55, md: 55, sm: 55));
+      }
+    }
   }
 
   &__add {
