--- a/app/components/header/nd-header.pug
+++ b/app/components/header/nd-header.pug
@@ -1,6 +1,6 @@
 mixin nd-header(host)
   - var isAuthorized = authorized ? 'is-login' : '';
-  +b.HEADER.nd-header.header__&attributes(attributes)(class=isAuthorized)
+  +b.HEADER.compensate-for-scrollbar.nd-header.header__&attributes(attributes)(class=isAuthorized)
     +e.wrapper
       .nd-container
         +e.logo
