--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -26,6 +26,7 @@
   padding-top: 94px;
   width: 100vw;
   max-width: 100vw;
+  min-height: 50vh;
 
   @include screen('xlg', max, 2) {
     padding-top: pxtovw(94, 1660);
