--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -490,6 +490,50 @@
         }
       }
 
+      &_state {
+        @include grid-column(1, 2);
+        @include grid-row(1, 4);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 3);
+          @include grid-row(2, 3);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(2, 3);
+        }
+      }
+
+      &_stats {
+        @include grid-column(2, 3);
+        @include grid-row(1, 2);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 2);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+        }
+      }
+
+      &_bank {
+        @include grid-column(2, 3);
+        @include grid-row(2, 3);
+
+        @include screen('md', max, 2) {
+          @include grid-column(2, 3);
+          @include grid-row(1, 2);
+        }
+
+        @include screen('sm', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(3, 4);
+        }
+      }
+
       &_upload {
         @include grid-column(1, 2);
         @include grid-row(1, 2);
