--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: center;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   max-width: 100vw;
   // z-index: 10;
