--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -210,7 +210,7 @@ $nd-color-border: #eaeaea;
 $nd-color-border2: #a3acba;
 $nd-color-border3: #d4dfe2;
 $nd-color-input-placeholder: #5c5c5c; //#4e4e4e;
-$nd-color-border4: #d1d8da;  //#d8ddde #d1d8da
+$nd-color-border4: #d1d8da;
 $nd-color-border5: #d8ddde;
 $nd-color-gray: #c6c6c6;
 $nd-color-gray2: #c4c4c4;
